# logask

./: Cargo.toml
.github/workflows/: checks.yml
.scripts/: pre-commit-hook.sh  prepare-hook.sh
logask-api-rest-server/: Cargo.toml
logask-core/: Cargo.toml
logask-core/src/model/: id.rs  id_ref.rs  mod.rs  tree.rs
logask-core/src/model/entity/: mod.rs  project.rs  task.rs
logask-core/src/model/value/: color.rs
logask-derives/: Cargo.toml
logask-derives/src/: lib.rs
logask-repository/: Cargo.toml
logask-repository/migration/: Cargo.toml
logask-repository/migration/src/: lib.rs  m20221219_151218_add_table_task.rs  m20221219_151220_add_table_project.rs
logask-repository/src/: error.rs  lib.rs
logask-repository/src/db/: ctx.rs  mod.rs  task.rs
logask-repository/src/db/entity/: mod.rs  task.rs
logask-repository/src/memory/: mod.rs  task.rs
logask-repository/src/traits/: mod.rs  task.rs
