[package]
name = "logask-repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logask-core = { path = "../logask-core" }
async-trait = "0.1.60"
tokio = { workspace = true }
thiserror = { workspace = true }

[dependencies.sea-orm]
version = "0.10.5"
optional = true
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]

[features]
default = ["db"]
db = ["sea-orm"]
in-memory = []
